--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.8",
     "autoprefixer": "^10.4.7",
     "eslint": "8.14.0",
